# BareBonesMPESynth

./: CMakeLists.txt  README.md
Source/: MainEditor.cpp  MainEditor.h  MainProcessor.cpp  MainProcessor.h
